--- a/k8s/k3s-home/argocd/nvr/frigate/values.yaml
+++ b/k8s/k3s-home/argocd/nvr/frigate/values.yaml
@@ -14,7 +14,6 @@ controllers:
           - secretRef:
               name: camera-rtsp-config
         env:
-          # LIBVA_DRIVER_NAME: i965
           LIBVA_DRIVER_NAME: iHD
         probes:
           liveness: &probes
@@ -39,14 +38,15 @@ controllers:
             memory: 5Gi
         # TODO: We should find a way to increase security here
         securityContext:
-          privileged: false
+          privileged: true
           # runAsUser: 1002
           # runAsGroup: 1002
           capabilities:
             add:
               - PERFMON
               - CAP_PERFMON
-              - SYS_ADMIN
+            drop:
+              - ALL
 
 service:
   app:
