feat: add server resources

--- a/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
@@ -64,6 +64,18 @@ data:
         focus: false
         showSearchSuggestions: true
         target: _blank
+    - resources:
+        cpu: true
+        memory: true
+        disk: /
+        cputemp: true
+        tempmin: 0 # optional, minimum cpu temp
+        tempmax: 100 # optional, maximum cpu temp
+        uptime: true
+        units: metric
+        refresh: 3000 # optional, in ms
+        diskUnits: bytes # optional, bytes (default) or bbytes. Only applies to disk
+        network: true # optional, uses 'default' if true or specify a network interface name
 
   bookmarks.yaml: |
     - Tech:
