feat: add monitoring for /storage

--- a/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
@@ -67,7 +67,9 @@ data:
     - resources:
         cpu: true
         memory: true
-        disk: /
+        disk:
+          - /
+          - /storage
         cputemp: true
         tempmin: 0 # optional, minimum cpu temp
         tempmax: 100 # optional, maximum cpu temp
