--- a/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/values.yaml
@@ -61,6 +61,10 @@ ingress:
         secretName: homepage-tls
 
 persistence:
+  storage:
+    existingClaim: local-homepage-pvc
+    globalMounts:
+      - path: /storage
   config:
     type: configMap
     name: homepage-config
