--- a/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
@@ -67,9 +67,6 @@ data:
     - resources:
         cpu: true
         memory: true
-        disk:
-          - /
-          - /storage
         cputemp: true
         tempmin: 0 # optional, minimum cpu temp
         tempmax: 100 # optional, maximum cpu temp
@@ -78,6 +75,14 @@ data:
         refresh: 3000 # optional, in ms
         diskUnits: bytes # optional, bytes (default) or bbytes. Only applies to disk
         network: true # optional, uses 'default' if true or specify a network interface name
+    - resources:
+        label: root
+        disk:
+          - /
+    - resources:
+        label: storage
+        disk:
+          - /storage
 
   bookmarks.yaml: |
     - Tech:
