chore: add label

--- a/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
+++ b/k8s/k3s-home/argocd/monitoring/homepage/configmap.yaml
@@ -65,6 +65,7 @@ data:
         showSearchSuggestions: true
         target: _blank
     - resources:
+        label: system
         cpu: true
         memory: true
         cputemp: true
