chore: replace *app

--- a/k8s/k3s-home/argocd/games/valheim/values.yaml
+++ b/k8s/k3s-home/argocd/games/valheim/values.yaml
@@ -40,7 +40,7 @@ controllers:
 
 service:
   app:
-    controller: *app
+    controller: valheim
     type: LoadBalancer
     loadBalancerIP: 10.10.21.80
     ports:
